--- a/fitur2.html
+++ b/fitur2.html
@@ -180,7 +180,7 @@
 
     <!-- 🔗 Navigasi Modular -->
     <div class="nav-buttons">
-      <a href="degodego.html" class="nav-home">🏠 Home</a>
+      <a href="index.html" class="nav-home">🏠 Home</a>
       <a href="fitur1.html" class="nav-prev">◀ Fitur 1</a>
     </div>
 
@@ -689,4 +689,5 @@
     window.addEventListener('DOMContentLoaded', loadFromStorage);
   </script>
 </body>
+
 </html>
