--- a/fitur2.html
+++ b/fitur2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Generator Togel + Kamar Lemah (28 Kontrol)</title>
+  <title>Rampa40</title>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -21,15 +21,15 @@
       margin: 0 0 16px;
       color: #1a365d;
     }
-    .nav-buttons {
-      display: flex;
-      gap: 8px;
+
+    /* Tombol Kembali ke Beranda */
+    .back-home {
+      text-align: center;
       margin: 12px 0;
     }
-    .nav-buttons a {
-      flex: 1;
-      text-align: center;
-      padding: 10px;
+    .back-home a {
+      display: inline-block;
+      padding: 10px 20px;
       background: #4285f4;
       color: white;
       text-decoration: none;
@@ -37,11 +37,9 @@
       font-weight: bold;
       font-size: 0.95em;
     }
-    .nav-buttons a:hover {
-      opacity: 0.9;
+    .back-home a:hover {
+      background: #3367d6;
     }
-    .nav-home { background: #4285f4; }
-    .nav-prev { background: #34a853; }
 
     .input-section {
       margin-bottom: 12px;
@@ -176,12 +174,11 @@
 </head>
 <body>
   <div class="container">
-    <h1>🔢 Generator Togel + Kamar Lemah (28 Kontrol)</h1>
+    <h1>🔢 Rampa40</h1>
 
-    <!-- 🔗 Navigasi Modular -->
-    <div class="nav-buttons">
-      <a href="index.html" class="nav-home">🏠 Home</a>
-      <a href="fitur1.html" class="nav-prev">◀ Fitur 1</a>
+    <!-- 🔙 Kembali ke Beranda -->
+    <div class="back-home">
+      <a href="index.html">🔙 Kembali ke Beranda</a>
     </div>
 
     <div class="input-section">
@@ -689,5 +686,4 @@
     window.addEventListener('DOMContentLoaded', loadFromStorage);
   </script>
 </body>
-
 </html>
