--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
     <a href="fitur5.html" class="feature-btn">ngai</a>
     <a href="fitur6.html" class="feature-btn">hasil</a>
     <a href="fitur7.html" class="feature-btn">nota</a>
-    <a href="fitur8.html" class="feature-btn">aca</a>
-    <a href="fitur9.html" class="feature-btn">puga</a>
-    <a href="fitur10.html" class="feature-btn">andhi</a>
+    <a href="fitur8.html" class="feature-btn">belum</a>
+    <a href="fitur9.html" class="feature-btn">belum1</a>
+    <a href="fitur10.html" class="feature-btn">belum2</a>
   </main>
 </body>
+
 </html>
